fix: remove card outline on mobile

--- a/src/components/job/css/job.module.css
+++ b/src/components/job/css/job.module.css
@@ -16,12 +16,17 @@
     padding-top: 5px;
 }
 
+
 .redirect {
     display: none;
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 1;
+}
+
+.card {
+    outline-width: 3px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -31,6 +36,10 @@
 
     .container {
         max-width: 100%;
+    }
+
+    .card {
+        outline-width: 0;
     }
 
     .redirect {
